# decisionpy

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: ci.yaml
decisionpy/: __init__.py  ddm.py  model.py  plot.py
tests/: test_ddm.py
