[tool.poetry]
name = "decisionpy"
version = "0.1.0"
description = "Implementations of various decision-making models in Python"
authors = ["Baptiste Pesquet <bpesquet@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bpesquet/decisionpy"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
matplotlib = "^3.7.1"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
